<resources>
    <string name="app_name">Social Movie Club</string>
    <string name="EXTRA_KEY_IMDB_ID">com.nickamor.movieclub.extra_key_imdb_id</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="movie_title_placeholder">Title</string>
    <string name="movie_year_placeholder">Year</string>
    <string name="movie_plot_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit gravida mi, facilisis molestie sem sodales at. Suspendisse commodo sapien at mi consequat eleifend. Ut ut diam ac libero luctus euismod. Curabitur bibendum urna sed nisl malesuada, ac sagittis ligula iaculis. Nunc molestie ex sed bibendum interdum. Etiam facilisis luctus felis sed feugiat.</string>
    <string name="party_date_hint">Date &amp; Time</string>
    <string name="party_venue_hint">Venue</string>
    <string name="party_location_hint">Location</string>
    <string name="party_invitees_hint">Invitees</string>
    <string name="party_new_invite_text">Invite</string>
    <string name="movie_add_party_text">New Party</string>
    <string name="movie_short_plot_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed suscipit gravida mi, facilisis molestie sem sodales at.</string>
    <string name="movie_list_item_invitees_default">No Invitees</string>
</resources>