<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/party_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/party_date_hint"
        android:inputType="datetime" />

    <EditText
        android:id="@+id/party_venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/party_venue_hint" />

    <EditText
        android:id="@+id/party_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/party_location_hint" />

    <EditText
        android:id="@+id/party_invitees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/party_invitees_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/party_new_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/party_new_invite_text" />

        <Button
            android:id="@+id/party_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/movie_add_party_text" />

    </LinearLayout>
</LinearLayout>