<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movie_poster_description"
        android:maxHeight="142dp"
        android:maxWidth="96dp"
        android:minHeight="142dp"
        android:minWidth="96dp"
        android:scaleType="fitStart"
        android:src="@drawable/default_poster" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/movie_poster"
        android:text="@string/movie_title_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_title"
        android:layout_toEndOf="@id/movie_poster"
        android:text="@string/movie_year_placeholder" />

    <TextView
        android:id="@+id/movie_full_plot"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_poster"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/movie_plot_placeholder" />

    <RatingBar
        android:id="@+id/movie_user_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/movie_full_plot"
        android:layout_centerHorizontal="true"
        android:numStars="5"
        android:stepSize="0.5" />

</RelativeLayout>